Add option to wordSize align the first element of arrays.