@@ -57,3 +57,35 @@
  *          java.xml
  * @run main/native GTestWrapper --gtest_filter=objArrayOop -XX:-UseCompressedOops -XX:ObjAlignmentInBytes=256
  */
+
+/* @test id=nocoh-noalign
+ * @summary Run object array size tests with compressed oops
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.xml
+ * @run main/native GTestWrapper --gtest_filter=objArrayOop -XX:-UseCompactObjectHeaders -XX:-AlignArrayElements
+ */
+
+/* @test id=coh-noalign
+ * @summary Run object array size tests with compressed oops
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.xml
+ * @run main/native GTestWrapper --gtest_filter=objArrayOop -XX:+UseCompactObjectHeaders -XX:-AlignArrayElements
+ */
+
+/* @test id=nocoh-align
+ * @summary Run object array size tests with compressed oops
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.xml
+ * @run main/native GTestWrapper --gtest_filter=objArrayOop -XX:-UseCompactObjectHeaders -XX:+AlignArrayElements
+ */
+
+/* @test id=coh-align
+ * @summary Run object array size tests with compressed oops
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.xml
+ * @run main/native GTestWrapper --gtest_filter=objArrayOop -XX:+UseCompactObjectHeaders -XX:+AlignArrayElements
+ */
